// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Inline english inline span in persian service article 1`] = `
.c0 {
  padding-bottom: 1.5rem;
  margin: 0;
}

<span
  class="c0"
  lang="en"
>
  This is text in a Inline.
</span>
`;

exports[`Inline persian inline span in english service article 1`] = `
.c0 {
  padding-bottom: 1.5rem;
  margin: 0;
}

<span
  class="c0"
  lang="fa"
>
  بعض محتوى النص
</span>
`;
